--- a/client/angular.json
+++ b/client/angular.json
@@ -32,7 +32,8 @@
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "./node_modules/ngx-toastr/toastr.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/ngx-spinner/animations/timer.css"
             ],
             "scripts": []
           },
