--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
   <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.4" />
+  <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
