end of section 15

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -3,11 +3,17 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+      
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db",
+    "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "super secret key",
+    "Issuer": "https://localhost:5001"
   },
    "ApiUrl": "https://localhost:5001/"
 }
