--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -4,9 +4,11 @@
     <ProjectReference Include="..\Core\core.csproj" />
   </ItemGroup>
   <ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.4" />
+  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.23.1" />
   <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
+  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
